welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:7: error: type mismatch;
 found   : String("0")
 required: Int
		return "0"
                       ^caughtSpeeding:9: error: type mismatch;
 found   : String("1")
 required: Int
		return "1"
                       ^caughtSpeeding:11: error: type mismatch;
 found   : String("2")
 required: Int
		return "2"
                       ^