welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	var nb:Int=0
	if(isBirthday==true) {
		nb=5
	}
	if(speed<=60+nb) {
		return "0"
	} else if(speed<=80+nb) {
		return "1"
	} else {
		return "2"
	}
}
